# webdrop

./: .env.local.example  DEPLOY.md  LICENSE  RAILWAY_DEPLOY.md  README.md  app.py  downloader.py  pyproject.toml  render.yaml  requirements.txt  run-local.bat  run-local.ps1
templates/: index.html
