[project]
name = "webdrop"
version = "1.0.0"
description = "WebDrop — Baixe replicas completas de sites com JS renderizado via Playwright"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "playwright>=1.57.0",
    "requests>=2.32.5",
]
